[FIX] #552 checkstyle fix